added angular-material and custom theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 
+<button mat-raised-button color="primary">Click Me!</button>
+<h2>Pratik Kathrotia <i class="material-icons">
+  add_shopping_cart
+  </i></h2>
+
 <router-outlet></router-outlet>
