added all the modules from material-design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 
 <button mat-raised-button color="primary">Click Me!</button>
-<h2>Pratik Kathrotia <i class="material-icons">
-  add_shopping_cart
-  </i></h2>
+<h2>Pratik Kathrotia</h2><br>
+<mat-icon>home</mat-icon>
+
+<form class="example-form">
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Favorite food" autocomplete="off">
+  </mat-form-field>
+</form>
 
 <router-outlet></router-outlet>
