added first route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,6 @@
 
-<eb-global-layout></eb-global-layout>
+<eb-global-layout>
+  <router-outlet></router-outlet>
+</eb-global-layout>
 
-<button mat-button color="primary">Basic</button>
-<button mat-raised-button color="primary">Raised</button>
-<button mat-stroked-button color="primary">Stroked</button>
-<button mat-flat-button color="primary">Flat</button>
 
-<h1>Pratik Kathrotia (h1)</h1>
-<h2>Pratik Kathrotia (h2)</h2>
-<h3>Pratik Kathrotia (h3)</h3>
-<h4>Pratik Kathrotia (h4)</h4>
-<h5>Pratik Kathrotia (h5)</h5>
-<h6>Pratik Kathrotia (h6)</h6>
-<p>Pratik Kathrotia (p)</p>
-<i>Pratik Kathrotia (i)</i><br>
-<strong>Pratik Kathrotia (strong)</strong>
-<br>
-<mat-icon>home</mat-icon>
-
-<form class="example-form">
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="Favorite food" autocomplete="off">
-  </mat-form-field>
-</form>
-
-<router-outlet></router-outlet>
