--- a/src/app/global-layout/global-layout.component.html
+++ b/src/app/global-layout/global-layout.component.html
@@ -1,2 +1,31 @@
-<eb-toolbar></eb-toolbar>
-<ng-content></ng-content>
+<div class="appContainer">
+  <div class="app_ToolbarContainer">
+    <eb-toolbar></eb-toolbar>
+  </div>
+  <div class="app_LayoutContainer">
+    <div class="layout_SidebarContainer">
+
+    </div>
+    <div class="layout_SiderailContainer">
+
+    </div>
+    <div class="layout_ContentContainer">
+      <div class="content_Header">
+
+      </div>
+      <div class="content_Actionbar">
+
+      </div>
+      <div class="content_View">
+        <!-- <ng-content></ng-content> -->
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
