--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
 * {
-  font-family: 'Lato', sans-serif; 
+  font-family: 'Lato', sans-serif;
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
 }
