--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 // global variables
 @import './colors.scss';
 
+$px: 0.0625rem;
 $box-shadow-bottom: 0 1px 0 0 $box-shadow-color;
 $box-shadow-right: 1px 0 0 0 $box-shadow-color;
