--- a/src/libs/ui-global/toolbar/toolbar.component.html
+++ b/src/libs/ui-global/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>Page Title Goes Here Goes Here</span>
+    <span>eBooks</span>
     <span class="example-spacer"></span>
     <mat-icon class="example-icon">favorite</mat-icon>
     <mat-icon class="example-icon">delete</mat-icon>
