--- a/src/app/global-layout/global-layout.component.html
+++ b/src/app/global-layout/global-layout.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="layout_ContentContainer">
       <div class="content_Header">
-
+        <eb-header></eb-header>
       </div>
       <div class="content_Actionbar">
 
