--- a/src/app/global-layout/global-layout.component.html
+++ b/src/app/global-layout/global-layout.component.html
@@ -14,7 +14,7 @@
         <eb-header></eb-header>
       </div>
       <div class="content_Actionbar">
-
+        <eb-action-bar></eb-action-bar>
       </div>
       <div class="content_View">
         <!-- <ng-content></ng-content> -->
