--- a/src/libs/ui-global/action-bar/action-bar.component.html
+++ b/src/libs/ui-global/action-bar/action-bar.component.html
@@ -1,3 +1,17 @@
-<p>
-  action-bar works!
-</p>
+<div class="actionbar">
+  <input matInput placeholder="Search . . ." autocomplete="off">
+  <div class="actionbar_Actions">
+    <button mat-flat-button color="accent">
+      <mat-icon>view_module</mat-icon> Grid
+    </button>
+    <button mat-flat-button color="accent">
+        <mat-icon>view_list</mat-icon> List
+    </button>
+    <button mat-flat-button color="accent">
+        <mat-icon>view_list</mat-icon> Action
+    </button>
+    <button mat-flat-button color="accent">
+        <mat-icon>view_list</mat-icon> Action
+    </button>
+  </div>
+</div>
