few style changes

--- a/src/app/global-layout/global-layout.component.html
+++ b/src/app/global-layout/global-layout.component.html
@@ -17,7 +17,7 @@
         <eb-action-bar></eb-action-bar>
       </div>
       <div class="content_View">
-        <!-- <ng-content></ng-content> -->
+        <ng-content></ng-content>
       </div>
     </div>
   </div>
