--- a/src/libs/ui-global/action-bar/action-bar.component.html
+++ b/src/libs/ui-global/action-bar/action-bar.component.html
@@ -2,16 +2,16 @@
   <input matInput placeholder="Search . . ." autocomplete="off">
   <div class="actionbar_Actions">
     <button mat-flat-button color="accent">
-      <mat-icon>view_module</mat-icon> Grid
+      <mat-icon class="sm">view_module</mat-icon> Grid
     </button>
     <button mat-flat-button color="accent">
-        <mat-icon>view_list</mat-icon> List
+        <mat-icon class="sm">view_list</mat-icon> List
     </button>
     <button mat-flat-button color="accent">
-        <mat-icon>view_list</mat-icon> Action
+        <mat-icon class="sm">settings</mat-icon> Action
     </button>
     <button mat-flat-button color="accent">
-        <mat-icon>view_list</mat-icon> Action
+        <mat-icon class="sm">view_list</mat-icon> Action
     </button>
   </div>
 </div>
