--- a/src/libs/ui-global/action-bar/action-bar.component.scss
+++ b/src/libs/ui-global/action-bar/action-bar.component.scss
@@ -3,7 +3,6 @@
 @import 'src/styles/global.scss';
 
 .actionbar {
-  // height: 56 * $px;
   display: flex;
   justify-content: space-between;
   padding: 10 * $px 16 * $px;
@@ -12,6 +11,14 @@
     border-bottom: 1px solid $box-shadow-color;
     padding: 3px;
     width: 400px;
+
+    &:focus {
+      border-bottom: 1px solid #00897b;
+    }
+
+    &::placeholder {
+      font-style: italic;
+    }
   }
 
   .actionbar_Actions {
