--- a/src/libs/ui-global/toolbar/toolbar.component.html
+++ b/src/libs/ui-global/toolbar/toolbar.component.html
@@ -3,6 +3,6 @@
     <span>eBooks</span>
     <span class="example-spacer"></span>
     <mat-icon class="example-icon">favorite</mat-icon>
-    <mat-icon class="example-icon">delete</mat-icon>
+    <mat-icon class="example-icon">face</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
