--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,17 @@
+@import './colors.scss';
+@import './variables.scss';
+
 .mat-button,
 .mat-flat-button,
 .mat-stroked-button,
 .mat-raised-button {
-  border-radius: 500px;
-  padding: 0 10 * $px;
-  line-height: 1;
+  font-weight: 500;
+  border-radius: 50 * $px;
+  line-height: 30 * $px;
+  white-space: nowrap;
+}
+
+mat-icon.sm {
+  font-size: 20 * $px;
+  margin-top: 3 * $px;
 }
