delete header and add tooltip to sidebar icons

--- a/src/libs/ui-global/sidebar/sidebar.component.html
+++ b/src/libs/ui-global/sidebar/sidebar.component.html
@@ -2,6 +2,8 @@
   <div class="sidebar_Item"
        *ngFor="let item of sidebarItems, let i = index"
        [ngClass]="{'selected': isSelected === item.id}"
+       [matTooltip]="item.tooltip"
+       matTooltipPosition="after"
        (click)="selectIcon(item)">
     <mat-icon color="primary">{{item.icon}}</mat-icon>
   </div>
