--- a/src/libs/ui-global/toolbar/toolbar.component.html
+++ b/src/libs/ui-global/toolbar/toolbar.component.html
@@ -2,7 +2,8 @@
   <mat-toolbar-row>
     <span>eBooks</span>
     <span class="example-spacer"></span>
-    <mat-icon class="example-icon">favorite</mat-icon>
-    <mat-icon class="example-icon">face</mat-icon>
+    <!-- <mat-icon class="example-icon">favorite</mat-icon> -->
+    <mat-icon class="person_icon">person</mat-icon>
+    <span>Sign In</span>
   </mat-toolbar-row>
 </mat-toolbar>
