resolve search input style issue

--- a/src/app/global-layout/global-layout.component.scss
+++ b/src/app/global-layout/global-layout.component.scss
@@ -36,6 +36,10 @@
       .content_View {
         flex: 1;
         padding: 10 * $px 16* $px;
+
+        .justForStyle {
+          display: none;
+        }
       }
     }
   }
