--- a/src/libs/ui-content/home/home.component.html
+++ b/src/libs/ui-content/home/home.component.html
@@ -15,8 +15,8 @@
 <br>
 <mat-icon>home</mat-icon>
 
-<form class="example-form">
-  <mat-form-field class="example-full-width">
+<!-- <form class="justForStyle">
+  <mat-form-field>
     <input matInput placeholder="Favorite food" autocomplete="off">
   </mat-form-field>
-</form>
+</form> -->
