--- a/src/app/global-layout/global-layout.component.html
+++ b/src/app/global-layout/global-layout.component.html
@@ -15,11 +15,18 @@
       </div>
       <div class="content_View">
         <ng-content></ng-content>
+
+        <!-- Just to get the styles right -->
+        <form class="justForStyle">
+          <mat-form-field>
+            <input matInput placeholder="Favorite food" autocomplete="off">
+          </mat-form-field>
+        </form>
+        <!-- upto here -->
       </div>
     </div>
   </div>
 </div>
-
 
 
 
