added template for sing-up

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,3 +1,17 @@
-<p>
-  sign-up works!
-</p>
+<div class="signUp_Container">
+  <div class="signUp">
+    <div class="signUp_Header">
+      <h2>Logo Goes Here</h2>
+    </div>
+    <div class="signUp_Content">
+      <form>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Firstname">
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Lastname">
+        </mat-form-field>
+      </form>
+    </div>
+  </div>
+</div>
