--- a/src/app/global-layout/global-layout.component.scss
+++ b/src/app/global-layout/global-layout.component.scss
@@ -35,7 +35,7 @@
 
       .content_View {
         flex: 1;
-        padding: 10 * $px 16* $px;
+        padding: 0 16* $px;
 
         .justForStyle {
           display: none;
