added signup page

--- a/src/app/global-layout/global-layout.component.scss
+++ b/src/app/global-layout/global-layout.component.scss
@@ -1,44 +1,50 @@
 @import 'src/styles/colors.scss';
 @import 'src/styles/variables.scss';
 
-.appContainer {
+.container {
+  background: $background-color;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
 
-  .app_ToolbarContainer {
-    max-height: 64 * $px;
-  }
-
-  .app_LayoutContainer {
+  .app_Container {
+    height: 100vh;
     display: flex;
-    flex-direction: row;
-    height: 100%;
-    background: $background-color;
+    flex-direction: column;
 
-    .layout_SidebarContainer {
-      box-shadow: $box-shadow-right;
+    .app_ToolbarContainer {
+      max-height: 64 * $px;
     }
 
-    .layout_SiderailContainer {
-      box-shadow: $box-shadow-right;
-    }
-
-    .layout_ContentContainer {
-      flex: 1;
+    .app_LayoutContainer {
       display: flex;
-      flex-direction: column;
+      flex-direction: row; 
+      height: 100%;
+      background:    $background-color;
 
-      .content_Actionbar {
-        box-shadow: $box-shadow-bottom;
+      .layout_SidebarContainer {
+        box-shadow: $box-shadow-right;
       }
 
-      .content_View {
-        flex: 1;
-        padding: 0 16* $px;
+      .layout_SiderailContainer {
+        box-shadow: $box-shadow-right;
+      }
 
-        .justForStyle {
-          display: none;
+      .layout_ContentContainer {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+
+        .content_Actionbar {
+          box-shadow: $box-shadow-bottom;
+        }
+
+        .content_View {
+          flex: 1;
+          padding: 0 16* $px;
+          overflow-y: auto;
+
+          .justForStyle {
+            display: none;
+          }
         }
       }
     }
