--- a/src/libs/ui-content/home/home.component.html
+++ b/src/libs/ui-content/home/home.component.html
@@ -20,3 +20,9 @@
     <input matInput placeholder="Favorite food" autocomplete="off">
   </mat-form-field>
 </form> -->
+
+<div class="saperator">
+  <div class="line1"></div>
+  <div class="content">New User</div>
+  <div class="line2"></div>
+</div>
