--- a/src/libs/ui-global/toolbar/toolbar.component.html
+++ b/src/libs/ui-global/toolbar/toolbar.component.html
@@ -2,8 +2,7 @@
   <mat-toolbar-row>
     <span>eBooks</span>
     <span class="example-spacer"></span>
-    <!-- <mat-icon class="example-icon">favorite</mat-icon> -->
     <mat-icon class="person_icon">person</mat-icon>
-    <span>Sign In</span>
+    <span class="signUp_Span" (click)="openSignUp()">Sign Up</span>
   </mat-toolbar-row>
 </mat-toolbar>
