--- a/src/libs/ui-global/toolbar/toolbar.component.scss
+++ b/src/libs/ui-global/toolbar/toolbar.component.scss
@@ -1,8 +1,13 @@
 .person_icon {
   padding: 0 14px;
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .example-spacer {
-  flex: 1 1 auto;
+  flex: 1;
+}
+
+.signUp_Span {
+  font-size: 18px;
+  cursor: pointer;
 }
