--- a/src/app/global-layout/global-layout.component.html
+++ b/src/app/global-layout/global-layout.component.html
@@ -1,28 +1,36 @@
-<div class="appContainer">
-  <div class="app_ToolbarContainer">
-    <eb-toolbar></eb-toolbar>
+<div class="container">
+  <div class="signUp_Container" *ngIf="signUp">
+    <eb-sign-up></eb-sign-up>
   </div>
-  <div class="app_LayoutContainer">
-    <div class="layout_SidebarContainer">
-      <eb-sidebar></eb-sidebar>
-    </div>
-    <div class="layout_SiderailContainer" *ngIf="showRail">
-      <eb-siderail></eb-siderail>
-    </div>
-    <div class="layout_ContentContainer">
-      <div class="content_Actionbar">
-        <eb-action-bar></eb-action-bar>
-      </div>
-      <div class="content_View">
-        <ng-content></ng-content>
+  <div class="signIn_Container">
 
-        <!-- Just to get the styles right -->
-        <form class="justForStyle">
-          <mat-form-field>
-            <input matInput placeholder="Favorite food" autocomplete="off">
-          </mat-form-field>
-        </form>
-        <!-- upto here -->
+  </div>
+  <div class="app_Container" *ngIf="!signUp">
+    <div class="app_ToolbarContainer">
+      <eb-toolbar (signUpVal)="getToolbarVal($event)"></eb-toolbar>
+    </div>
+    <div class="app_LayoutContainer">
+      <div class="layout_SidebarContainer">
+        <eb-sidebar></eb-sidebar>
+      </div>
+      <div class="layout_SiderailContainer" *ngIf="showRail">
+        <eb-siderail></eb-siderail>
+      </div>
+      <div class="layout_ContentContainer">
+        <div class="content_Actionbar">
+          <eb-action-bar></eb-action-bar>
+        </div>
+        <div class="content_View">
+          <ng-content></ng-content>
+
+          <!-- Just to get the styles right -->
+          <form class="justForStyle">
+            <mat-form-field>
+              <input matInput placeholder="Favorite food" autocomplete="off">
+            </mat-form-field>
+          </form>
+          <!-- upto here -->
+        </div>
       </div>
     </div>
   </div>
