--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -2,21 +2,22 @@
 @import 'src/styles/variables.scss';
 @import 'src/styles/colors.scss';
 
-.signUp_Container {
+.signUp_Box {
   display: flex;
   height: 100%;
 
   .signUp {
     box-shadow: 2px 2px 2px 2px $box-shadow-color;
-    height: 500px;
+    background: white;
+    border-radius: 4px;
     width: 400px;
     margin: auto;
+    margin-top: 30px;
+    padding: 20px 20px 40px 20px;
     display: flex;
     flex-direction: column;
 
     &_Header {
-      border: 0.5px solid black;
-
       h2 {
         text-align: center;
       }
@@ -26,6 +27,27 @@
       flex: 1;
       display: flex;
       flex-direction: column;
+
+      .form_User {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        .formField_FullWidth {
+          width: 100%;
+        }
+
+        .form_Actions {
+          display: flex;
+          justify-content: space-between;
+          width: 100%;
+          padding: 20px 0 0 0;
+
+          button {
+            width: 48%;
+          }
+        }
+      }
     }
   }
 }
