--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,12 +1,12 @@
 <div class="signIn_Container">
   <div class="signIn_Div">
     <div class="signIn_Form_Div">
-      <form class="signIn-form">
+      <form class="signIn-form" [formGroup]="signInForm">
         <mat-form-field class="signIn_Full_Width">
-          <input matInput placeholder="Username or Email"/>
+          <input matInput placeholder="Username or Email" formControlName="userName"/>
         </mat-form-field>
         <mat-form-field class="signIn_Full_Width">
-          <input matInput placeholder="Password" /> 
+          <input matInput placeholder="Password" formControlName="password"/> 
         </mat-form-field>
         <br />
         <a href="#"><small>Forgot Password?</small></a>
