functionality for sign in page

--- a/src/app/global-layout/global-layout.component.html
+++ b/src/app/global-layout/global-layout.component.html
@@ -1,43 +1,41 @@
 <div class="container">
-  <div class="signUp_Container" *ngIf="signUp">
-    <eb-sign-up></eb-sign-up>
-  </div>
-  <div class="signIn_Container">
-
-  </div>
-  <div class="app_Container" *ngIf="!signUp">
-    <div class="app_ToolbarContainer">
-      <eb-toolbar (signUpVal)="getToolbarVal($event)"></eb-toolbar>
-    </div>
-    <div class="app_LayoutContainer">
-      <div class="layout_SidebarContainer">
-        <eb-sidebar></eb-sidebar>
+    <div *ngIf="signUp || loggedIn" calss="logoPage">
+      <h2>Logo Goes Here</h2>
+      <div class="signUp_Container" *ngIf="signUp">
+        <eb-sign-up></eb-sign-up>
       </div>
-      <div class="layout_SiderailContainer" *ngIf="showRail">
-        <eb-siderail></eb-siderail>
-      </div>
-      <div class="layout_ContentContainer">
-        <div class="content_Actionbar">
-          <eb-action-bar></eb-action-bar>
-        </div>
-        <div class="content_View">
-          <ng-content></ng-content>
-
-          <!-- Just to get the styles right -->
-          <form class="justForStyle">
-            <mat-form-field>
-              <input matInput placeholder="Favorite food" autocomplete="off">
-            </mat-form-field>
-          </form>
-          <!-- upto here -->
-        </div>
+      <div class="signIn_Container" *ngIf="loggedIn">
+        <eb-sign-in (signUpPage)="getToolbarVal($event)" (prevPage)="getHomePage($event)"></eb-sign-in>
       </div>
     </div>
+    <div class="app_Container" *ngIf="!signUp && !loggedIn">
+      <div class="app_ToolbarContainer">
+        <eb-toolbar (signUpVal)="getToolbarVal($event)" (signInVal)="getSignInVal($event)"></eb-toolbar>
+      </div>
+      <div class="app_LayoutContainer">
+        <div class="layout_SidebarContainer">
+          <eb-sidebar></eb-sidebar>
+        </div>
+        <div class="layout_SiderailContainer" *ngIf="showRail">
+          <eb-siderail></eb-siderail>
+        </div>
+        <div class="layout_ContentContainer">
+          <div class="content_Actionbar">
+            <eb-action-bar></eb-action-bar>
+          </div>
+          <div class="content_View">
+            <ng-content></ng-content>
+  
+            <!-- Just to get the styles right -->
+            <form class="justForStyle">
+              <mat-form-field>
+                <input matInput placeholder="Favorite food" autocomplete="off">
+              </mat-form-field>
+            </form>
+            <!-- upto here -->
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-
-
-
-
-
-
+    
