--- a/src/app/sign-in/sign-in.component.scss
+++ b/src/app/sign-in/sign-in.component.scss
@@ -26,6 +26,11 @@
         padding: 10 * $px 15 * $px;
         margin: 30 * $px 0 * $px 0 * $px 0 * $px;
       }
+
+      button {
+        cursor: pointer;
+      }
+
     }
 
     .seperation_Div {
@@ -56,21 +61,5 @@
         width: 50%;
       }
     }
-  }
-
-  
-
-  
-    
-  
-
-  
-
-  
-
- 
-  
-  
-
-  
+  } 
 }
