--- a/src/libs/ui-global/toolbar/toolbar.component.scss
+++ b/src/libs/ui-global/toolbar/toolbar.component.scss
@@ -7,7 +7,14 @@
   flex: 1;
 }
 
+.sign_In_Span {
+  font-size: 18px;
+  cursor: pointer;
+  padding-right: 20px;
+}
+
 .signUp_Span {
   font-size: 18px;
   cursor: pointer;
+  padding-right: 4px;
 }
