--- a/src/app/global-layout/global-layout.component.html
+++ b/src/app/global-layout/global-layout.component.html
@@ -25,17 +25,17 @@
           </div>
           <div class="content_View">
             <ng-content></ng-content>
-  
-            <!-- Just to get the styles right -->
-            <form class="justForStyle">
-              <mat-form-field>
-                <input matInput placeholder="Favorite food" autocomplete="off">
-              </mat-form-field>
-            </form>
-            <!-- upto here -->
-          </div>
+
+          <!-- Just to get the styles right -->
+          <form class="justForStyle" [formGroup]="demoForm">
+            <mat-form-field>
+              <input matInput formControlName="name">
+            </mat-form-field>
+          </form>
+          <!-- upto here -->
         </div>
       </div>
     </div>
   </div>
+</div>
     
