--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -17,14 +17,18 @@
         </div>
       </form>
     </div>
-    <div class="content">
-      New User?
+    <div class="seperation_Div">
+      <div class="line">
+      </div>
+      <div class="content">
+        New User?
+      </div>
+      <div class="line">
+      </div>
     </div>
-    <div class="line">
+    <div class="signUp_Div">
+      <button mat-raised-button color="primary" class="signUp_Button" (click)="openSignUp()">Sign Up</button>
     </div>
-  </div>
-  <div class="signUp_Div">
-    <button mat-raised-button color="primary" class="signUp_Button" (click)="openSignUp()">Sign Up</button>
   </div>
 </div>
     
