try to add multiple router-outlets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 
-<eb-global-layout>
+<router-outlet name="authOutlet"></router-outlet>
+<router-outlet>
+  <router-outlet name="globalOutlet"></router-outlet>
+</router-outlet>
+<!-- <eb-global-layout>
   <router-outlet></router-outlet>
-</eb-global-layout>
+</eb-global-layout> -->
 
 
