finally finally finally implemented nested routing

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -13,7 +13,7 @@
           <br />
           <div class="signIn_Button_Div">
             <button mat-raised-button color="primary">Sign In</button>
-            <button mat-raised-button color="accent" (click)="backToPrev()">Cancel</button>
+            <button mat-raised-button color="accent" routerLink="/global/home">Cancel</button>
           </div>
         </form>
       </div>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="signUp_Div">
-        <button mat-raised-button color="primary" class="signUp_Button" (click)="openSignUp()">Sign Up</button>
+        <button mat-raised-button color="primary" class="signUp_Button" routerLink="/sign-up">Sign Up</button>
       </div>
     </div>
   </div>
