--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -45,7 +45,7 @@
           <button mat-flat-button
                   color="primary"
                   type="submit">Sign Up</button>
-          <button mat-flat-button color="accent">Cancel</button>
+          <button mat-flat-button color="accent" routerLink="/global/home">Cancel</button>
         </div>
       </form>
     </div>
