--- a/src/libs/ui-global/toolbar/toolbar.component.html
+++ b/src/libs/ui-global/toolbar/toolbar.component.html
@@ -2,8 +2,8 @@
     <mat-toolbar-row>
       <span>eBooks</span>
       <span class="example-spacer"></span>
-      <span class="sign_In_Span" (click)="openSignIn()">Sign In</span>
+      <span class="sign_In_Span" routerLink="/sign-in">Sign In</span>
       <mat-icon class="person_icon" *ngIf="loggedIn">person</mat-icon>
-      <span class="signUp_Span" (click)="openSignUp()">Sign Up</span>
+      <span class="signUp_Span" routerLink="/sign-up">Sign Up</span>
     </mat-toolbar-row>
   </mat-toolbar>
