--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="signIn_Container">
   <div class="signIn_Div">
     <div class="signIn_Form_Div">
-      <form class="signIn-form" [formGroup]="signInForm">
+      <form class="signIn-form" [formGroup]="signInForm" (ngSubmit)="onSubmit()">
         <mat-form-field class="signIn_Full_Width">
           <input matInput placeholder="Username or Email" formControlName="userName"/>
         </mat-form-field>
@@ -12,7 +12,7 @@
         <a href="#"><small>Forgot Password?</small></a>
         <br />
         <div class="signIn_Button_Div">
-          <button mat-raised-button color="primary">Sign In</button>
+          <button mat-raised-button color="primary" type="submit">Sign In</button>
           <button mat-raised-button color="accent" routerLink="/global/home">Cancel</button>
         </div>
       </form>
