Final Sign Up and Sign In Page

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,17 +1,23 @@
 <div class="signIn_Container">
   <div class="signIn_Div">
+    <div class="signIn_Header">
+      <h2>Logo Goes Here</h2>
+    </div>
     <div class="signIn_Form_Div">
-      <form class="signIn-form" [formGroup]="signInForm">
+      <form class="signIn-form" [formGroup]="signInForm" (ngSubmit)="onSignInSubmit()">
         <mat-form-field class="signIn_Full_Width">
           <input matInput placeholder="Username or Email" formControlName="userName"/>
         </mat-form-field>
         <mat-form-field class="signIn_Full_Width">
-          <input matInput placeholder="Password" formControlName="password"/> 
+          <input matInput type="password" placeholder="Password" formControlName="password"/> 
         </mat-form-field>
         <br />
         <a href="#"><small>Forgot Password?</small></a>
         <br />
-        <div class="signIn_Button_Div">
+        <div  class="remember_Sign_In_Details">
+          <mat-checkbox color="warn" formControlName="checked">Remember me</mat-checkbox>
+        </div>
+          <div class="signIn_Button_Div">
           <button mat-raised-button color="primary">Sign In</button>
           <button mat-raised-button color="accent" routerLink="/global/home">Cancel</button>
         </div>
