--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -4,7 +4,6 @@
       <h2>Logo Goes Here</h2>
     </div>
     <div class="signUp_Content">
-      <h2>Sign Up</h2>
       <form class="form_User" [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
         <mat-form-field>
           <input matInput
@@ -42,13 +41,13 @@
                  autocomplete="off">
         </mat-form-field>
         <mat-form-field class="formField_FullWidth">
-          <input matInput
+          <input matInput type="password"
                  placeholder="Password"
                  formControlName="password"
                  autocomplete="off">
         </mat-form-field>
         <mat-form-field class="formField_FullWidth">
-          <input matInput
+          <input matInput type="password"
                  placeholder="Confirm Password"
                  formControlName="confirmPassword"
                  [errorStateMatcher]="passwordErrorMatcher"
@@ -57,6 +56,9 @@
               {{ getCPassErrorMessage() }}
           </mat-error>
         </mat-form-field>
+        <div class="term_And_Coditions">
+          <small>By clicking Sign Up, you agree <a href="#">Terms & Conditions</a>.</small>
+        </div>
         <div class="form_Actions">
           <button mat-flat-button
                   color="primary"
