--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -4,13 +4,15 @@
 
 .signUp_Box {
   display: flex;
-  height: 100%;
+  height: 100vh;
+  background: $background-color;
 
   .signUp {
     box-shadow: 2 * $px 2 * $px 2 * $px 2 * $px $box-shadow-color;
     background: white;
     border-radius: 4 * $px;
     width: 400 * $px;
+    height: 540 * $px;
     margin: auto;
     margin-top: 30 * $px;
     padding: 20 * $px 20 * $px 40 * $px 20 * $px;
@@ -35,6 +37,10 @@
 
         .formField_FullWidth {
           width: 100%;
+        }
+
+        .term_And_Coditions {
+          margin: 10 * $px 0;
         }
 
         .form_Actions {
