Firebase Auth for Database

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -15,7 +15,9 @@
         <a href="#"><small>Forgot Password?</small></a>
         <br />
         <div  class="remember_Sign_In_Details">
-          <mat-checkbox color="warn" formControlName="checked">Remember me</mat-checkbox>
+          <mat-checkbox color="primary" formControlName="checked">
+            <small>Remember me</small>
+          </mat-checkbox>
         </div>
           <div class="signIn_Button_Div">
           <button mat-raised-button color="primary" type="submit">Sign In</button>
@@ -31,7 +33,7 @@
       <div class="line"></div>
     </div>
     <div class="signUp_Div">
-      <button mat-raised-button color="primary" class="signUp_Button" routerLink="/sign-up">Sign Up</button>
+      <button mat-raised-button color="primary" class="signUp_Button" routerLink="/sign-up">Sign Up for Free!</button>
     </div>
   </div>
 </div>
