--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -41,23 +41,27 @@
                  autocomplete="off">
         </mat-form-field>
         <mat-form-field class="formField_FullWidth">
-          <input matInput type="password"
+          <input matInput
                  placeholder="Password"
                  formControlName="password"
-                 autocomplete="off">
+                 autocomplete="off"
+                 [type]="hide ? 'password' : 'text'">
+          <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </mat-form-field>
         <mat-form-field class="formField_FullWidth">
-          <input matInput type="password"
+          <input matInput
                  placeholder="Confirm Password"
                  formControlName="confirmPassword"
                  [errorStateMatcher]="passwordErrorMatcher"
-                 autocomplete="off">
+                 autocomplete="off"
+                 [type]="hideConfirmPassword ? 'password' : 'text'">
+          <mat-icon matSuffix (click)="hideConfirmPassword = !hideConfirmPassword">{{hideConfirmPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
           <mat-error *ngIf="signUpForm.controls.confirmPassword.errors || signUpForm.hasError('passwordNotMatch')">
               {{ getCPassErrorMessage() }}
           </mat-error>
         </mat-form-field>
         <div class="term_And_Coditions">
-          <small>By clicking Sign Up, you agree <a href="#">Terms & Conditions</a>.</small>
+          <small>By clicking Sign up, you agree <a href="#">Terms & Conditions</a>.</small>
         </div>
         <div class="form_Actions">
           <button mat-flat-button
