--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -6,7 +6,7 @@
     <div class="signIn_Form_Div">
       <form class="signIn-form" [formGroup]="signInForm" (ngSubmit)="onSignInSubmit()">
         <mat-form-field class="signIn_Full_Width">
-          <input matInput placeholder="Username or Email" formControlName="userName"/>
+          <input matInput placeholder="Email" formControlName="email"/>
         </mat-form-field>
         <mat-form-field class="signIn_Full_Width">
           <input matInput type="password" placeholder="Password" formControlName="password"/> 
@@ -19,7 +19,7 @@
         </div>
           <div class="signIn_Button_Div">
           <button mat-raised-button color="primary" type="submit">Sign In</button>
-          <button mat-raised-button color="accent" routerLink="/global/home">Cancel</button>
+          <button mat-raised-button color="accent">Cancel</button>
         </div>
       </form>
     </div>
