--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -4,6 +4,9 @@
       <h2>Logo Goes Here</h2>
     </div>
     <div class="signUp_Content">
+      <div class="error_Message" *ngIf="errorMsg">
+        {{ errorMsg }}
+      </div>
       <form class="form_User" [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
         <mat-form-field>
           <input matInput
@@ -52,20 +55,24 @@
           </mat-error>
         </mat-form-field>
         <mat-form-field class="formField_FullWidth">
-          <input matInput type="password"
+          <input matInput
                  placeholder="Password"
                  formControlName="password"
-                 autocomplete="off">
+                 autocomplete="off"
+                 [type]="hide ? 'password' : 'text'">
+          <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           <mat-error *ngIf="signUpForm.controls.password.errors">
             {{ getPasswordErrorMsg() }}
           </mat-error>
         </mat-form-field>
         <mat-form-field class="formField_FullWidth">
-          <input matInput type="password"
+          <input matInput
                  placeholder="Confirm Password"
                  formControlName="confirmPassword"
                  [errorStateMatcher]="passwordErrorMatcher"
-                 autocomplete="off">
+                 autocomplete="off"
+                 [type]="hideConPass ? 'password' : 'text'">
+          <mat-icon matSuffix (click)="hideConPass = !hideConPass">{{hideConPass ? 'visibility_off' : 'visibility'}}</mat-icon>
           <mat-error *ngIf="signUpForm.controls.confirmPassword.errors || signUpForm.hasError('passwordNotMatch')">
               {{ getCPassErrorMessage() }}
           </mat-error>
